@@ -2,6 +2,7 @@ from AccessControl.Permission import Permission
 from ftw.testbrowser import browsing
 from ftw.testbrowser.pages.statusmessages import error_messages
 from ftw.testbrowser.pages.statusmessages import info_messages
+from ftw.testbrowser.pages.statusmessages import warning_messages
 from opengever.testing import IntegrationTestCase
 from opengever.testing import obj2brain
 from opengever.trash.remover import Remover
@@ -39,6 +40,156 @@ class TestTrash(IntegrationTestCase):
             info_messages())
         self.assertEquals(
             '{}#documents'.format(self.dossier.absolute_url()), browser.url)
+
+    @browsing
+    def test_shows_statusmessage_on_trashed_document(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.subdocument),
+            send_authenticator=True,
+        )
+        browser.open(self.subdocument)
+        self.assertEqual(['This document is trashed.'], warning_messages())
+
+    @browsing
+    def test_does_not_show_statusmessage_on_next_view_after_viewing_trashed_document(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.subdocument),
+            send_authenticator=True,
+        )
+        browser.open(self.subdocument)
+        browser.open(self.dossier)
+        self.assertEqual([], warning_messages())
+
+    @browsing
+    def test_does_not_show_statusmessage_on_tab_of_trashed_document(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.subdocument),
+            send_authenticator=True,
+        )
+        browser.open(self.subdocument, view='tabbedview_view-overview')
+        self.assertEqual([], warning_messages())
+
+    @browsing
+    def test_does_not_show_statusmessage_on_next_view_after_viewing_a_tab_of_a_trashed_document(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.subdocument),
+            send_authenticator=True,
+        )
+        browser.open(self.subdocument, view='tabbedview_view-overview')
+        browser.open(self.dossier)
+        self.assertEqual([], warning_messages())
+
+    @browsing
+    def test_shows_statusmessage_on_trashed_mail_eml(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.mail_eml),
+            send_authenticator=True,
+        )
+        browser.open(self.mail_eml)
+        self.assertEqual(['This mail is trashed.'], warning_messages())
+
+    @browsing
+    def test_does_not_show_statusmessage_on_next_view_after_viewing_trashed_mail_eml(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.mail_eml),
+            send_authenticator=True,
+        )
+        browser.open(self.mail_eml)
+        browser.open(self.dossier)
+        self.assertEqual([], warning_messages())
+
+    @browsing
+    def test_does_not_show_statusmessage_on_tab_of_trashed_mail_eml(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.mail_eml),
+            send_authenticator=True,
+        )
+        browser.open(self.mail_eml, view='tabbedview_view-overview')
+        self.assertEqual([], warning_messages())
+
+    @browsing
+    def test_does_not_show_statusmessage_on_next_view_after_viewing_a_tab_of_a_trashed_mail_eml(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.mail_eml),
+            send_authenticator=True,
+        )
+        browser.open(self.mail_eml, view='tabbedview_view-overview')
+        browser.open(self.dossier)
+        self.assertEqual([], warning_messages())
+
+    @browsing
+    def test_shows_statusmessage_on_trashed_mail_msg(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.mail_msg),
+            send_authenticator=True,
+        )
+        browser.open(self.mail_msg)
+        self.assertEqual(['This mail is trashed.'], warning_messages())
+
+    @browsing
+    def test_does_not_show_statusmessage_on_next_view_after_viewing_trashed_mail_msg(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.mail_msg),
+            send_authenticator=True,
+        )
+        browser.open(self.mail_msg)
+        browser.open(self.dossier)
+        self.assertEqual([], warning_messages())
+
+    @browsing
+    def test_does_not_show_statusmessage_on_tab_of_trashed_mail_msg(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.mail_msg),
+            send_authenticator=True,
+        )
+        browser.open(self.mail_msg, view='tabbedview_view-overview')
+        self.assertEqual([], warning_messages())
+
+    @browsing
+    def test_does_not_show_statusmessage_on_next_view_after_viewing_a_tab_of_a_trashed_mail_msg(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.mail_msg),
+            send_authenticator=True,
+        )
+        browser.open(self.mail_msg, view='tabbedview_view-overview')
+        browser.open(self.dossier)
+        self.assertEqual([], warning_messages())
 
     @browsing
     def test_redirect_back_and_shows_message_when_no_items_is_selected(self, browser):
@@ -170,3 +321,123 @@ class TestUntrash(IntegrationTestCase):
 
         browser.open(self.empty_dossier, view="untrashed", data=data)
         self.assertFalse(ITrashed.providedBy(self.empty_document))
+
+
+class TestTrashWithBumblebee(IntegrationTestCase):
+
+    features = ('bumblebee',)
+
+    @browsing
+    def test_shows_statusmessage_on_trashed_document_bumblebee_document_overlay(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.subdocument),
+            send_authenticator=True,
+        )
+        browser.open(self.subdocument, view='bumblebee-overlay-document')
+        self.assertEqual(
+            ['This document is trashed.'],
+            browser.css('.portalMessage.warning dd').text,
+        )
+
+    @browsing
+    def test_shows_statusmessage_on_trashed_document_bumblebee_listing_overlay(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.subdocument),
+            send_authenticator=True,
+        )
+        browser.open(self.subdocument, view='bumblebee-overlay-listing')
+        self.assertEqual(
+            ['This document is trashed.'],
+            browser.css('.portalMessage.warning dd').text,
+        )
+
+    @browsing
+    def test_shows_statusmessage_on_trashed_document_bumblebee_version_listing_overlay(self, browser):
+        self.login(self.regular_user, browser)
+        # Ensure we have two versions of the document
+        self.checkout_document(self.subdocument)
+        self.checkin_document(self.subdocument)
+        self.checkout_document(self.subdocument)
+        self.checkin_document(self.subdocument)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.subdocument),
+            send_authenticator=True,
+        )
+        browser.open(self.subdocument, view='bumblebee-overlay-listing?version_id=0')
+        self.assertEqual(
+            ['This document is trashed.', 'You are looking at a versioned file.'],
+            browser.css('.portalMessage.warning dd').text,
+        )
+        browser.open(self.subdocument, view='bumblebee-overlay-listing?version_id=1')
+        self.assertEqual(
+            ['This document is trashed.'],
+            browser.css('.portalMessage.warning dd').text,
+        )
+
+    @browsing
+    def test_shows_statusmessage_on_trashed_mail_eml_bumblebee_document_overlay(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.mail_eml),
+            send_authenticator=True,
+        )
+        browser.open(self.mail_eml, view='bumblebee-overlay-document')
+        self.assertEqual(
+            ['This mail is trashed.'],
+            browser.css('.portalMessage.warning dd').text,
+        )
+
+    @browsing
+    def test_shows_statusmessage_on_trashed_mail_eml_bumblebee_listing_overlay(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.mail_eml),
+            send_authenticator=True,
+        )
+        browser.open(self.mail_eml, view='bumblebee-overlay-listing')
+        self.assertEqual(
+            ['This mail is trashed.'],
+            browser.css('.portalMessage.warning dd').text,
+        )
+
+    @browsing
+    def test_shows_statusmessage_on_trashed_mail_msg_bumblebee_document_overlay(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.mail_msg),
+            send_authenticator=True,
+        )
+        browser.open(self.mail_msg, view='bumblebee-overlay-document')
+        self.assertEqual(
+            ['This mail is trashed.'],
+            browser.css('.portalMessage.warning dd').text,
+        )
+
+    @browsing
+    def test_shows_statusmessage_on_trashed_mail_msg_bumblebee_listing_overlay(self, browser):
+        self.login(self.regular_user, browser)
+        browser.open(
+            self.dossier,
+            view='trashed',
+            data=self.make_path_param(self.mail_msg),
+            send_authenticator=True,
+        )
+        browser.open(self.mail_msg, view='bumblebee-overlay-listing')
+        self.assertEqual(
+            ['This mail is trashed.'],
+            browser.css('.portalMessage.warning dd').text,
+        )
